--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^3.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3"
   }
 }
